<resources>
    <string name="google_maps_API_key">AIzaSyBsnD2WqXfFePvWbFhS2h2iNfyWylSpdrs</string>
    <string name="app_name">ParkLah</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="search_hint">Enter Address, City or Zip Code</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_review">Rate and review</string>
    <string name="sort_prompt">Sort by:</string>
    <string name="abc_search_hint">Enter Places, Address or Zip Code</string>
    <string name="carpark_id">Carpark ID</string>
    <string name="carpark_address">Address</string>
    <string name="carpark_distance">Distance to destination</string>
    <string name="carpark_slots">Available slots</string>
    <string name="text_username">Daniel Wijaya</string>
    <string name="text_reviewdescription">Your review will be posted publicly on the web. </string>
    <string name="button_submit">Submit</string>
    <string name="feedback_input">The carpark is very safe</string>
    <string-array name="sort_list">
        <item>Sort by: Distance</item>
        <item>Sort by: Slots Available</item>
        <item>Sort by: Rating</item>

    </string-array>
    <string name="title_activity_search">SearchActivity</string>
    <string name="text_feedback">Write your feedback</string>
    <string name="reviewconfirm">Confirm to submit?</string>
    <string name="confirm">Html.fromHtml("<font color='#4885ed'>Confirm</font>")</string>
    <string name="cancel">Html.fromHtml("<font color='#4885ed'>Cancel</font>")</string>
    <string name="yes">Html.fromHtml("<font color='#4885ed'>Yes</font>")</string>
    <string name="no">Html.fromHtml("<font color='#4885ed'>No</font>")</string>
    <string name="cancelconfirm">Discard the review?</string>
    <string name="nullcarparks">There are no carparks nearby the location</string>
    <string name="nulllocation">There are no such locations</string>
</resources>
