<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="starwars.coding.com.ParkLah.Search.SearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <Spinner
            android:id="@+id/sort_options_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp" />

    </RelativeLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_container">


        <android.support.v7.widget.Toolbar
            android:id="@+id/searchable_search"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:background="@color/theme_primary"
            app:title="Search..."
            />

        <com.miguelcatalan.materialsearchview.MaterialSearchView
            android:id="@+id/search_activity_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBackground"
            android:hint="@string/search_hint"
            android:textColorHint="@color/colorBackground"/>

        

    </FrameLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollViewCarParks"
        android:layout_width="match_parent"
        android:layout_height="479dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="88dp"
        android:padding="10dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:id="@+id/layout1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/carpark_id"
                        android:textColor="@color/colorTextHint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/carpark_id"
                        android:textColor="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/carpark_address"
                        android:textColor="@color/colorTextHint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/carpark_address"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/carpark_distance"
                        android:textColor="@color/colorTextHint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/carpark_distance"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/carpark_slots"
                        android:textColor="@color/colorTextHint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/carpark_slots"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>
