<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollCarParks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        >

        <LinearLayout
            android:id="@+id/linlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:descendantFocusability="blocksDescendants">

            <fragment
                android:id="@+id/carparkmap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                tools:context="starwars.coding.com.ParkLah.CarparkDetail.CarparkDetailActivity" />

            <LinearLayout
                android:id="@+id/carparklayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/carparkmap"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/carpark_id"
                        android:textColor="@color/colorTextHint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/carparkid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="filled later"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/carpark_address"
                        android:textColor="@color/colorTextHint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="filled later"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/carpark_distance"
                        android:textColor="@color/colorTextHint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="filled later"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/carpark_slots"
                        android:textColor="@color/colorTextHint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/slots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="filled later"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Carpark type"
                        android:textColor="@color/colorTextHint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/carparktype"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="filled later"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Free_parking"
                        android:textColor="@color/colorTextHint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/free_parking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="filled later"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Night parking"
                        android:textColor="@color/colorTextHint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/night_parking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="filled later"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Type of carpark system"
                        android:textColor="@color/colorTextHint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/type_of_carpark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="filled later"
                        android:textAlignment="center"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linlayout"
                android:text="Write a Review"
                android:id="@+id/reviewButton"
                android:layout_marginHorizontal="135dp"
                android:textAlignment="center" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recycler_view">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/go_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="690dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/GoogleBlue"
        android:src="@drawable/ic_go_icon"
        android:tooltipText="Go to Maps"
        app:fabSize="mini" />

</RelativeLayout>